@@ -1,11 +1,13 @@
 package ti4.helpers;
 
+import static java.util.Map.entry;
+
 import java.awt.Point;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
-public class Constants {
+public final class Constants {
     // Staff Pings
     public static final String chassitId = "183213554445320192";
     public static final String eronousId = "465241936408608769";
@@ -16,12 +18,35 @@ public class Constants {
     public static final String gedsDeadId = "586504147746947090";
     public static final String sigmaId = "214326507458396161";
     public static final String bambamId = "487030345812672523";
-    public static final List<String> honoraryJazz = Arrays.asList("1153503280706625606", tspId);
+    public static final List<String> honoraryJazz = List.of("1153503280706625606", tspId);
     public static final String jabberwockyId = "455013002953883651";
     public static final String solaxId = "380689512621277185";
+    public static final String andcatId = "238933125072158720";
+    public static final String privateStaticVoidId = "148195684644814848";
 
     // Server IDs
     public static final String ASYNCTI4_HUB_SERVER_ID = "943410040369479690";
+
+    public static final Map<String, String> EMOJI_FARM_SERVERS = Map.ofEntries(
+            entry("1155639926675746886", "Emoji Farm 1"),
+            entry("1156671516784730314", "Emoji Farm 2"),
+            entry("1156686770436591637", "Emoji Farm 3"),
+            entry("1158956227829706762", "Emoji Farm 4"),
+            entry("1158956387376828507", "Emoji Farm 5"),
+            entry("1158956545019760750", "Emoji Farm 6"),
+            entry("1158956865875615836", "Emoji Farm 7"),
+            entry("1158956969290383360", "Emoji Farm 8"),
+            entry("1164297443379249302", "Emoji Farm 9"),
+            entry("1164298025603190864", "Emoji Farm 10"),
+            entry("1171620536833560676", "Emoji Farm 11"),
+            entry("1180152020582289478", "Emoji Farm 12"),
+            entry("1180160763353124864", "Emoji Farm 13"),
+            entry("1197344983531913267", "Emoji Farm 14"),
+            entry("1220415501608681512", "Emoji Farm 15"),
+            entry("1220415609725124660", "Emoji Farm 16"),
+            entry("1220415693837832212", "Emoji Farm 17"),
+            entry("1243245147551170582", "Emoji Farm 18"),
+            entry("1303437221361352715", "Emoji Farm 19"));
 
     public static String jazzPing() {
         return "<@" + jazzId + ">";
@@ -37,6 +62,10 @@ public class Constants {
 
     public static String solaxPing() {
         return "<@" + solaxId + ">";
+    }
+
+    public static String privateStaticVoidPing() {
+        return "<@" + privateStaticVoidId + ">";
     }
 
     // Standard Thread Names
@@ -57,6 +86,7 @@ public class Constants {
     public static final String DRAFT_QUEUE = "franken_items_to_draft";
     public static final String SHOW_GAME = "show_game";
     public static final String ONLY_LAST_MONTH = "only_last_month";
+    public static final String LAST_N_DAYS = "last_n_days";
     public static final String FOWGM = "fowgm";
     public static final String FRACTURE = "fracture";
     public static final String TEMPORARY_PING_DISABLE = "temporary_ping_disable";
@@ -65,6 +95,11 @@ public class Constants {
     public static final String ADD_TEAMMATE = "add_teammate";
     public static final String REMOVE_TEAMMATE = "remove_teammate";
     public static final String SPIN_TILES_IN_RINGS = "spin_tiles_in_rings";
+    public static final String SPIN = "spin";
+    public static final String SPIN_LIST = "list";
+    public static final String SPIN_ADD = "add";
+    public static final String SPIN_REMOVE = "remove";
+    public static final String SPIN_EXECUTE = "execute";
     public static final String OFFER_AUTOPASS_OPTIONS = "offer_autopass_options";
     public static final String OFFER_AFKTIME_OPTIONS = "offer_afktime_options";
     public static final String SURVEY = "survey";
@@ -95,6 +130,12 @@ public class Constants {
     public static final String ALLIANCE_MODE = "alliance_mode";
     public static final String FOW_MODE = "fow_mode";
     public static final String AVERNUS = "avernus";
+    public static final String BROKENPLANET1 = "brokenplanet1";
+    public static final String BROKENPLANET2 = "brokenplanet2";
+    public static final String BROKENPLANET3 = "brokenplanet3";
+    public static final String BROKENPLANET4 = "brokenplanet4";
+    public static final String BROKENPLANET5 = "brokenplanet5";
+    public static final String BROKENPLANET6 = "brokenplanet6";
     public static final String FOW_OPTIONS = "fow_options";
     public static final String BASE_GAME_MODE = "base_game_mode";
     public static final String THUNDERS_EDGE_MODE = "thunders_edge_mode";
@@ -105,14 +146,15 @@ public class Constants {
     public static final String HOMEBREW_SC_MODE = "homebrew_sc_mode";
     public static final String SPIN_MODE = "spin_mode";
     public static final String BUTTON_PRESS_COUNT = "button_press_count";
-    public static final String SLASH_COMMAND_COUNT = "slash_command_count";
-    public static final String SLASH_COMMAND_STRING = "slash_command_string";
-    public static final String ACS_SABOD = "acs_sabod";
+    public static final String EVENT_SEQUENCE_COUNTER = "event_sequence_counter";
+    public static final String PENDING_SUB_EVENTS_JSON = "pending_sub_events_json";
+    public static final String PENDING_MOVEMENT_STATE = "pending_movement_state";
     public static final String ABSOL_MODE = "absol_mode";
     public static final String PROMISES_PROMISES = "promises_promises";
     public static final String FLAGSHIPPING = "flagshipping";
     public static final String JUST_UNITS = "just_units";
     public static final String DISCORDANT_STARS_MODE = "discordant_stars_mode";
+    public static final String BLUE_REVERIE_MODE = "blue_reverie_mode";
     public static final String UNCHARTED_SPACE_STUFF = "uncharted_space_stuff";
     public static final String ROLE_FOR_COMMUNITY = "roleForCommunity";
     public static final String THUNDERSEDGE = "thundersedge";
@@ -132,6 +174,7 @@ public class Constants {
     public static final String SHOW_GEARS = "show_gears";
     public static final String SHOW_BANNERS = "show_banners";
     public static final String SHOW_HEX_BORDERS = "show_hex_borders";
+    public static final String VOLTRON_STYLE = "voltron_style";
     public static final String HOMEBREW_MODE = "homebrew_mode";
     public static final String UNDO_BUTTON = "undo_button";
     public static final String FAST_SC_FOLLOW = "fast_sc_follow";
@@ -181,7 +224,7 @@ public class Constants {
     public static final String JOIN = "join";
     public static final String START_SCENARIO = "start_scenario";
     public static final String ADD = "add";
-    public static final String COMPARE_AFK_TIMES = "compare_afk_times";
+    public static final String COMPARE_ACTIVITY_TIMES = "compare_activity_times";
     public static final String REPLACE = "replace";
     public static final String LEAVE = "leave";
     public static final String REMOVE = "remove";
@@ -198,6 +241,7 @@ public class Constants {
     public static final String SETTING_TYPE = "setting_type";
 
     public static final String TOKEN_INGRESS = "token_ingress.png";
+    public static final String TOKEN_EGRESS = "token_egress.png";
     public static final String TOKEN_BREACH_ACTIVE = "token_breachActive.png";
     public static final String TOKEN_BREACH_INACTIVE = "token_breachInactive.png";
     public static final String TOKEN_SEVERED = "token_severed.png";
@@ -227,6 +271,7 @@ public class Constants {
 
     /* From \data\ */
     public static final String SEARCH_ABILITIES = "abilities";
+    public static final String SEARCH_PLOTS = "plots";
     public static final String SEARCH_BREAKTHROUGHS = "breakthroughs";
     public static final String SEARCH_GALACTIC_EVENTS = "galactic_events";
     public static final String SEARCH_ACTION_CARDS = "action_cards";
@@ -331,6 +376,8 @@ public class Constants {
     public static final String REMOVE_CUSTOM_ADJACENT_TILES = "remove_custom_adjacent_tiles";
     public static final String REMOVE_ALL_CUSTOM_ADJACENT_TILES = "remove_all_custom_adjacent_tiles";
     public static final String ADD_TILE = "add_tile";
+    public static final String ROTATE_HYPERLANE = "rotate_hyperlane";
+    public static final String ROTATION = "rotation";
     public static final String ADD_TILE_RANDOM = "add_tile_random";
     public static final String RANDOM_TYPE = "random_type";
     public static final String INCLUDE_ERONOUS_TILES = "eronous_tiles";
@@ -358,6 +405,7 @@ public class Constants {
     public static final String ADD_TILE_LIST = "add_tile_list";
     public static final String ADD_FRONTIER_TOKENS = "add_frontier_tokens";
     public static final String ADD_UNITS = "add_units";
+    public static final String LAND_UNITS = "land_units";
     public static final String ADD_UNIT_DAMAGE = "add_sustain_damage";
     public static final String MOVE_UNITS = "move_units";
     public static final String NO_MAPGEN = "no_mapgen";
@@ -390,9 +438,8 @@ public class Constants {
     public static final int SPACE_RADIUS = 115;
     public static final int RADIUS = 45;
     public static final Point SPACE_CENTER_POSITION = new Point(172, 150);
-    public static final Point TOKEN_PLANET_POSITION = new Point(172, 33); // 55, 5
-    public static final Point TOKEN_PLANET_CENTER_OFFSET = new Point(71, 59);
-    public static final Point MIRAGE_TRIPLE_POSITION = new Point(38, 178);
+    public static final Point TOKEN_PLANET_POSITION = new Point(244, 100); // 55, 5
+    public static final Point MIRAGE_TRIPLE_POSITION = new Point(110, 245);
     public static final String SLEEPER = "sleeper";
     public static final String DMZ = "dmz";
     public static final String DMZ_LARGE = "dmz_large";
@@ -405,11 +452,24 @@ public class Constants {
     private static final String CRADLE = "cradle";
     private static final String ILLUSION = "illusion";
     private static final String PHANTASM = "phantasm";
-    public static final List<String> TOKEN_PLANETS =
-            List.of(MIRAGE, OASIS, CRADLE, ILLUSION, PHANTASM, AVERNUS, THUNDERSEDGE);
+    public static final List<String> TOKEN_PLANETS = List.of(
+            MIRAGE,
+            OASIS,
+            CRADLE,
+            ILLUSION,
+            PHANTASM,
+            AVERNUS,
+            THUNDERSEDGE,
+            BROKENPLANET1,
+            BROKENPLANET2,
+            BROKENPLANET3,
+            BROKENPLANET4,
+            BROKENPLANET5,
+            BROKENPLANET6);
 
     public static final String FRONTIER = "frontier";
 
+    public static final String CREATION_DATE_TIME = "creation_date_time";
     public static final String CREATION_DATE = "creation_date";
     public static final String LAST_MODIFIED_DATE = "last_modified_date";
     public static final String ROUND = "round";
@@ -435,10 +495,15 @@ public class Constants {
     public static final String LIZHO_REVEAL_TRAP = "lizho_reveal_trap";
     public static final String LIZHO_SWAP_TRAP = "lizho_swap_trap";
     public static final String STELLAR_CONVERTER = "stellar_converter";
+    public static final String EXPEDITION_WIN_RATES = "expedition_win_rates";
+    public static final String TWILIGHTS_FALL_SPLICE_WIN_RATES = "tf_splice_win_rates";
     public static final String SEND_DEBT = "send_debt";
     public static final String DEBT_COUNT = "debt_count";
     public static final String REMOVE_DEBT = "remove_debt";
     public static final String DEBT = "debt";
+    public static final String DEBT_POOL = "debt_pool";
+    public static final String DEBT_DEFAULT_POOL = "Debt Account";
+    public static final String VADEN_DEBT_POOL = "Shark Loans";
     public static final String ION_TOKEN_FLIP = "ion_storm_flip";
     public static final String TOKEN_SLEEPER_PNG = "token_sleeper.png";
     public static final String LIZHO_TRAP_PNG = "attachment_lizhotrap.png";
@@ -454,6 +519,7 @@ public class Constants {
     public static final String ADD_CC_TO_FS = "mahact_cc_to_fs";
     public static final String REMOVE_CC_FROM_FS = "mahact_cc_from_fs";
     public static final String SPECIAL = "special";
+    public static final String BOUNTIES = "bounties";
     public static final String FOW = "fow";
     public static final String FOW_SYSTEMS = "fow_systems";
     public static final String FOG_FILTER = "fog_filter";
@@ -483,6 +549,7 @@ public class Constants {
     public static final String ANOMALIES_CAN_TOUCH = "anomalies_can_touch";
     public static final String INCLUDE_DS_TILES = "include_ds_tiles";
     public static final String INCLUDE_DS_FACTIONS = "include_ds_factions";
+    public static final String INCLUDE_BR_FACTIONS = "include_br_factions";
     public static final String USE_MAP_TEMPLATE = "use_map_template";
 
     // /custom command
@@ -499,6 +566,7 @@ public class Constants {
     public static final String REMOVE_SO_FROM_GAME = "remove_so_from_game";
     public static final String REMOVE_PO_FROM_GAME = "remove_po_from_game";
     public static final String REMOVE_SC_FROM_GAME = "remove_sc_from_game";
+    public static final String REMOVE_RELIC_FROM_GAME = "remove_relic_from_game";
 
     public static final String SET_PO_DECK = "set_po_deck";
     public static final String SET_PO_DECK_STAGE1_LIST = "stage1_ids";
@@ -511,6 +579,8 @@ public class Constants {
     public static final String CURRENT_ACDRAWSTATUS_INFO = "current_acdrawstatus_info";
     public static final String AGENDA_VOTE_INFO = "agenda_vote_info";
     public static final String CHECK_REACTS_INFO = "check_reacts_info";
+    public static final String GAME_STATS = "game_stats";
+    public static final String PLAYER_STORED_VALUES = "player_stored_values";
     public static final String THALNOS_UNITS = "thalnos_units";
     public static final String DISPLACED_UNITS_SYSTEM = "displaced_units_system";
     public static final String DISPLACED_UNITS_ACTIVATION = "displaced_units_activation";
@@ -583,6 +653,7 @@ public class Constants {
     public static final String SC_FOLLOW = "sc_follow";
     public static final String SC_PLAY = "sc_play";
     public static final String SC_UNPLAY = "sc_unplay";
+    public static final String UNPASS = "unpass";
     public static final String SC_PICK = "sc_pick";
     public static final String SC_UNPICK = "sc_unpick";
     public static final String PASS = "pass";
@@ -641,6 +712,7 @@ public class Constants {
     public static final String SEND_TG = "send_tg";
     public static final String SEND_COMMODITIES = "send_commodities";
     public static final String SETUP = "setup";
+    public static final String SETUP_STARTING_FLEET = "setup_starting_fleet";
     public static final String WEIRD_GAME_SETUP = "weird_game_setup";
     public static final String GALACTIC_EVENTS_SETUP = "galactic_events_setup";
     public static final String CUSTOMIZATION = "customization";
@@ -821,6 +893,7 @@ public class Constants {
     public static final String REVEAL_STAGE2 = "po_reveal_stage2";
     public static final String SCORE_OBJECTIVE = "po_score";
     public static final String UNSCORE_OBJECTIVE = "po_unscore";
+    public static final String UNREVEAL_OBJECTIVE = "po_unreveal";
     public static final String SHUFFLE_OBJECTIVE_BACK = "po_shuffle_back";
     public static final String PO_ID = "public_id";
     public static final String PO_NAME = "public_name";
@@ -851,7 +924,7 @@ public class Constants {
     public static final String SO_LIST_SCORED = "list_scored";
 
     public static final String TURN_ORDER = "turn_order";
-    public static final String TURN_STATS = "turn_stats";
+    public static final String AVERAGE_TURN_STATS = "average_turn_stats";
     public static final String VOTE_COUNT = "vote_count";
     public static final String SC_TRADE_GOODS = "sc_trade_goods";
     public static final String SC_COUNT = "sc_count";
@@ -891,12 +964,14 @@ public class Constants {
     public static final String PICK_AC_FROM_DISCARD = "pick_from_discard";
     public static final String PICK_AC_FROM_PURGED = "pick_from_purged";
     public static final String SHUFFLE_AC_BACK_INTO_DECK = "shuffle_back_into_deck";
+    public static final String SHUFFLE_AC_FROM_HAND = "shuffle_from_hand";
     public static final String REVEAL_AND_PUT_AC_INTO_DISCARD = "reveal_and_put_into_discard";
     public static final String SEND_AC = "send";
     public static final String SEND_AC_RANDOM = "send_random";
     public static final String SHOW_AC_DISCARD_LIST = "show_discard_list";
     public static final String SHOW_AC_PURGED_LIST = "show_purged_list";
     public static final String SHOW_AC_REMAINING_CARD_COUNT = "show_remaining_card_count";
+    public static final String SHOW_GARBOZIA_AC = "show_garbozia";
 
     public static final String PROMISSORY_NOTE_ID = "promissory_note_id";
     public static final String PROMISSORY_NOTES = "promissory_notes";
@@ -979,9 +1054,9 @@ public class Constants {
     // Twilight's Fall
     public static final String TF_ABILITY = "tf_ability";
     public static final String TF_UNIT_UPGRADE = "tf_unit_upgrade";
-    public static final String GENOME = "genome";
-    public static final String PARADIGM = "paradigm";
-    public static final String EDICT = "edict";
+    public static final String TF_GENOME = "tf_genome";
+    public static final String TF_PARADIGM = "tf_paradigm";
+    public static final String TF_EDICT = "tf_edict";
 
     public static final String HS_TILE_POSITION = "hs_tile_position";
 
@@ -1040,6 +1115,8 @@ public class Constants {
     public static final String INCLUDE_OPTIONS = "include_options";
     public static final String CARDS_INFO = "cards_info";
     public static final String FRANKEN = "franken";
+    public static final String FRANKEN2 = "franken2";
+    public static final String FRANKENDRAZ = "frankendraz";
     public static final String SHOW_GAME_AS_PLAYER = "show_game_as";
     public static final String CHECK_PRIVATE_COMMUNICATIONS = "check_private_communications";
 
@@ -1049,6 +1126,8 @@ public class Constants {
     public static final String MILTY_DRAFT_SETTINGS = "milty_draft_settings";
     public static final String DRAFT_MANAGER = "draft_manager";
     public static final String DRAFT_SYSTEM_SETTINGS = "draft_system_settings";
+    public static final String FRANKEN_DRAFT_SETTINGS = "franken_draft_settings";
+    public static final String BASE_GAME_MINI_MILTY_SETTINGS = "base_game_mini_milty_settings";
     public static final String DRAFT = "draft";
 
     // groups
@@ -1156,6 +1235,7 @@ public class Constants {
     public static final String STARTINGFLEET_LIMIT = "startingfleet_limit";
     public static final String BLUETILE_LIMIT = "bluetile_limit";
     public static final String REDTILE_LIMIT = "redtile_limit";
+    public static final String BREAKTHROUGH_LIMIT = "breakthrough_limit";
     public static final String FIRSTPICK_LIMIT = "firstpick_limit";
     public static final String LATERPICK_LIMIT = "laterpick_limit";
 
@@ -1171,6 +1251,7 @@ public class Constants {
     public static final String ABILITY_4 = "ability_4";
     public static final String ABILITY_5 = "ability_5";
     public static final String ABILITIES = "abilities";
+    public static final String EXHAUSTED_ABILITIES = "exhausted_abilities";
     public static final String ABILITY_INFO = "ability_info";
     public static final String ABILITY_ADD = "ability_add";
     public static final String ABILITY_REMOVE = "ability_remove";
@@ -1191,6 +1272,7 @@ public class Constants {
     public static final String CC_N_PLASTIC_LIMIT = "cc_n_plastic_limit";
     public static final String DRAFT_MODE = "draft_mode";
     public static final String BAN_LIST = "ban_list";
+    public static final String BOT_ALL_REACTS = "bot_all_reacts";
     public static final String BOT_FACTION_REACTS = "bot_faction_reacts";
     public static final String BOT_COLOR_REACTS = "bot_color_reacts";
     public static final String BOT_STRAT_REACTS = "bot_strat_reacts";
@@ -1219,13 +1301,8 @@ public class Constants {
     public static final String VERBOSITY_VERBOSE = "verbose";
     private static final String VERBOSITY_AVERAGE = "average";
     private static final String VERBOSITY_MINIMAL = "minimal";
-    public static final List<String> VERBOSITY_OPTIONS = new ArrayList<>();
-
-    static {
-        VERBOSITY_OPTIONS.add(VERBOSITY_VERBOSE);
-        VERBOSITY_OPTIONS.add(VERBOSITY_AVERAGE);
-        VERBOSITY_OPTIONS.add(VERBOSITY_MINIMAL);
-    }
+    public static final List<String> VERBOSITY_OPTIONS =
+            List.of(VERBOSITY_VERBOSE, VERBOSITY_AVERAGE, VERBOSITY_MINIMAL);
 
     public static final String BETA_TEST_MODE = "beta_test_mode";
     public static final String CC_LIMIT = "cc_limit";
@@ -1250,10 +1327,14 @@ public class Constants {
     public static final String NO_FRACTURE = "no_fracture";
     public static final String CALL_OF_THE_VOID_MODE = "call_of_the_void_mode";
     public static final String WILD_WILD_GALAXY_MODE = "wild_wild_galaxy_mode";
+    public static final String FEAST_OR_FAMINE_MODE = "feast_or_famine_mode";
     public static final String STELLAR_ATOMICS_MODE = "stellar_atomics_mode";
     public static final String NO_SWAP_MODE = "no_swap_mode";
     public static final String VEILED_HEART_MODE = "veiled_heart_mode";
+    public static final String LORE_MODE = "lore_mode";
     public static final String LIMITED_WHISPERS_MODE = "limited_whispers_mode";
+    public static final String WHISPERS_ENABLED = "whispers_enabled";
+    public static final String WHISPERS_DISABLED = "whispers_disabled";
     public static final String ORDINIAN_C1_MODE = "ordinian_c1_mode";
     public static final String LIBERATION_C4_MODE = "liberation_c4_mode";
     public static final String FAKE_COMMANDERS = "fake_commanders";
@@ -1269,6 +1350,8 @@ public class Constants {
     public static final String NORMAL_GAME = "normal_game";
     public static final String INCLUDE_ALIASES = "include_aliases";
     public static final String SEARCH = "search";
+    public static final String FIND = "find";
+    public static final String SEARCH_TYPE = "type";
     public static final String BENTOR_HAS_FOUND_CFRAG = "has_found_cfrag";
     public static final String BENTOR_HAS_FOUND_HFRAG = "has_found_hfrag";
     public static final String BENTOR_HAS_FOUND_IFRAG = "has_found_ifrag";
@@ -1282,6 +1365,8 @@ public class Constants {
     public static final String PATH_TOKEN_COUNT = "path_token_count";
     public static final String HONOR_COUNT = "honor_count";
     public static final String DISHONOR_COUNT = "dishonor_count";
+    public static final String STEELBALANCE_COUNT = "steelbalance_count";
+    public static final String STARBALANCE_COUNT = "starbalance_count";
     public static final String HARVEST_COUNT = "harvest_count";
     public static final String GLEDGE_CORE_PNG = "token_ds_gledgecore.png";
     public static final String DS_COMMAND = "ds";
@@ -1302,6 +1387,10 @@ public class Constants {
     public static final String DRAW_RANDOM_ABILITY = "draw_random_ability";
     public static final String RADICAL_ADVANCEMENT = "radical_advancement";
     public static final String DO_EDICT_PHASE = "edict_phase";
+    public static final String SPLICE_TYPE = "splice_type";
+    public static final String REVERSE_SPLICE = "reverse_splice";
+    public static final String START_NEW_SPLICE = "start_new_splice";
+    public static final String ADD_TO_SPLICE = "add_to_splice";
     public static final String GALVANIZE = "galvanize";
     public static final String FIX_COLORS = "fix_colors";
     public static final String DRAW_RANDOM_UNIT = "draw_random_unit";
@@ -1316,11 +1405,14 @@ public class Constants {
     public static final String RUN_DATA_MIGRATIONS = "run_data_migrations";
     public static final String ENDED_DATE = "ended_date";
     public static final String REPLACEMENT_MADE = "replacement_made";
-    public static final String AVERAGE_TURN_TIME = "average_turn_time";
+    public static final String GLOBAL_AVERAGE_TURN_TIME = "global_average_turn_time";
     public static final String DICE_LUCK = "dice_luck";
+    public static final String HITS_PER_TURN = "hits_per_turn";
     public static final String LIFETIME_RECORD = "lifetime_record";
     public static final String FACTION_RECORD_OF_TECH = "faction_record_of_tech";
     public static final String FACTION_RECORD_OF_SCPICK = "faction_record_of_scpick";
+    public static final String FACTION_TOP_COLORS = "faction_top_colors";
+    public static final String ACTION_CARD_STATS = "action_card_stats";
     public static final String SPENDS = "spends";
     public static final String TOP_LIMIT = "top_limit";
     public static final String MINIMUM_NUMBER_OF_TURNS = "minimum_number_of_turns";
@@ -1334,13 +1426,18 @@ public class Constants {
     public static final String UNIT_ID_5 = "unit_id_5";
     public static final String UNIT_REMOVE = "unit_remove";
     public static final String UNIT_ADD = "unit_add";
+    public static final String BREAKTHROUGH_ADD = "breakthrough_add";
+    public static final String BREAKTHROUGH_REMOVE = "breakthrough_remove";
     public static final String UNIT_INFO = "unit_info";
     public static final String CLEAR_DEBT = "clear_debt";
+    public static final String CHANGE_DEBT_ICON = "change_debt_icon";
     public static final String MECH_ID = "mech";
     public static final String FLAGSHIP_ID = "flagship";
     public static final String OBSERVER = "observer";
     public static final String REMOVE_TITLE = "remove_title";
     public static final String EDIT_TRACK_RECORD = "edit_track_record";
+    public static final String SET_GAME_LIMIT = "set_game_limit";
+    public static final String SET_STATS_TRACKED_USER = "set_stats_tracked_user";
     public static final String TITLE = "title";
     public static final String ADD_REMOVE = "add_remove";
 
@@ -1365,6 +1462,7 @@ public class Constants {
     public static final String RUN_MANUAL_DATA_MIGRATION = "run_manual_data_migration";
     public static final String CRON_NAME = "cron_name";
     public static final String RUN_CRON = "run_cron";
+    public static final String UPLOAD_RECENT_GAME_STATS = "upload_recent_game_stats";
 
     public static final String HELIOS_ATTACHMENT_1 = "attachment_helios1.png";
     public static final String HELIOS_ATTACHMENT_2 = "attachment_helios2.png";
@@ -1384,6 +1482,12 @@ public class Constants {
     public static final String BREAKTHROUGH_ACTV = "breakthrough_actv";
     public static final String BREAKTHROUGH_TGS = "breakthrough_tgs";
 
+    public static final String BREAKTHROUGHS = "breakthroughs";
+    public static final String BREAKTHROUGH_EXH_MAP = "breakthrough_exh_map";
+    public static final String BREAKTHROUGH_UNL_MAP = "breakthrough_unl_map";
+    public static final String BREAKTHROUGH_ACTV_MAP = "breakthrough_actv_map";
+    public static final String BREAKTHROUGH_TGS_MAP = "breakthrough_tgs_map";
+
     public static final String AC_DECK_ID = "ac_deck_id";
     public static final String SO_DECK_ID = "so_deck_id";
     public static final String STAGE_1_PUBLIC_DECK_ID = "stage_1_public_deck_id";
@@ -1392,6 +1496,8 @@ public class Constants {
     public static final String AGENDA_DECK_ID = "agenda_deck_id";
     public static final String EXPLORATION_DECK_ID = "exploration_deck_id";
     public static final String STATS_ANCHOR_LOCATION = "stats_anchor_location";
+    public static final String STATS_TRACKED_USER_ID = "stats_tracked_user_id";
+    public static final String STATS_TRACKED_USER_NAME = "stats_tracked_user_name";
     public static final String SET_STATS_ANCHOR = "set_stats_anchor";
     public static final String IGNORE_ENDED_GAMES = "ignore_ended_games";
     public static final String MEDIAN_TURN_TIME = "median_turn_time";
@@ -1423,7 +1529,6 @@ public class Constants {
     public static final String FACTION_IMAGE_URL = "faction_image_url";
     public static final String SET_FACTION_ICON = "set_faction_icon";
     public static final String SET_FACTION_DISPLAY_NAME = "set_faction_display_name";
-    public static final String SET_BREAKTHROUGH = "set_breakthrough";
     public static final String SET_HOMESYSTEM_POS = "set_hs_position";
     public static final String FRANKEN_FACTION_NAME = "franken_faction_suffix";
     public static final String FORCE = "force";
@@ -1457,6 +1562,8 @@ public class Constants {
     public static final String PLAYER_TEMP_MODS = "PLAYER_TEMP_MODS";
     public static final String PLAYER_NEW_TEMP_MODS = "PLAYER_NEW_TEMP_MODS";
     public static final String ARCHIVE_CHANNELS = "archive_channels";
+    public static final String GET_CHANNEL_HTML = "get_channel_html";
+    public static final String CHANNEL = "channel";
     public static final String MILTYMOD_MODE = "miltymod_mode";
     public static final String EVENT_PLAY = "play";
     public static final String INCLUDE_RAW_STRING = "include_raw_string";
@@ -1475,6 +1582,7 @@ public class Constants {
     public static final String REFRESH_UNIT_INFO = "refreshUnitInfo";
     public static final String REFRESH_ALL_UNIT_INFO = "refreshUnitInfoAll";
     public static final String REFRESH_TECH_INFO = "refreshTechInfo";
+    public static final String REFRESH_BREAKTHROUGH_INFO = "refreshBreakthroughInfo";
     public static final String REFRESH_PLANET_INFO = "refreshPlanetInfo";
     public static final String SERVER_GAME_STATS = "server_game_stats";
     public static final String START_COMBAT = "start_combat";
@@ -1498,7 +1606,13 @@ public class Constants {
     public static final String TIGL_CHANGE_NICKNAME = "change_nickname";
     public static final String TIGL_NICKNAME = "nickname";
     public static final String TIGL_FRACTURED_TAG = "TIGL Fractured";
+    public static final String LAZAX = "lazax";
+    public static final String LAZAX_MY_POINTS = "my_points";
+    public static final String LAZAX_TOP_100 = "top_100";
+    public static final String LAZAX_DELEGATION_LEADERBOARD = "delegation_leaderboard";
+    public static final String PUBLIC = "public";
     public static final String IS_FRACTURED = "is_fractured";
+    public static final String SHOW_GAME_IDS = "show_game_ids";
     public static final String SEARCH_NAMES = "search_names";
     public static final String SEARCH_TAGS = "search_tags";
     public static final String SEARCH_USERS = "search_users";
@@ -1513,6 +1627,14 @@ public class Constants {
     public static final String SECONDS = "seconds";
     public static final String MOVE_TILE = "move_tile";
     public static final String TRANSACTION = "transaction";
+    public static final String TRANSACTION_START = "transaction_start";
     public static final String ALL = "ALL";
     public static final String COEXIST = "coexist";
+
+    public static final String TWILIGHT_KART = "twilight_kart";
+    public static final String TWILIGHT_DS = "twilight_ds";
+    public static final String ABILITY_DECK_ID = "ability_deck_id";
+    public static final String GENOME_DECK_ID = "genome_deck_id";
+    public static final String PARADIGM_DECK_ID = "paradigm_deck_id";
+    public static final String UNITUPGRADE_DECK_ID = "unitupgrade_deck_id";
 }
