@@ -14,16 +14,18 @@ import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
-import ti4.buttons.Buttons;
+import org.apache.commons.lang3.function.Consumers;
+import ti4.discord.interactions.buttons.Buttons;
+import ti4.game.Game;
+import ti4.game.Player;
 import ti4.helpers.Constants;
 import ti4.helpers.twilightsfall.TwilightsFallInfoHelper;
 import ti4.image.Mapper;
-import ti4.map.Player;
+import ti4.logging.BotLogger;
+import ti4.logging.LogOrigin;
 import ti4.message.MessageHelper;
 import ti4.message.componentsV2.MessageV2Builder;
 import ti4.message.componentsV2.MessageV2Editor;
-import ti4.message.logging.BotLogger;
-import ti4.message.logging.LogOrigin;
 import ti4.model.FactionModel;
 import ti4.service.draft.draftables.AndcatReferenceCardsDraftable;
 import ti4.service.draft.draftables.AndcatReferenceCardsDraftable.ReferenceCardPackage;
@@ -44,11 +46,11 @@ public class AndcatReferenceCardsMessageHelper {
         Player player = draftManager.getGame().getPlayer(playerUserId);
         MessageHelper.sendMessageToChannel(
                 player.getCardsInfoThread(),
-                player.getRepresentationUnfogged() + " Here's an overview of the packages:");
+                player.getRepresentationUnfogged() + ", here is an overview of the packages:");
         sendPackageInfos(player.getCardsInfoThread(), packages);
     }
 
-    public static void sendPackageInfos(MessageChannel channel, List<ReferenceCardPackage> packages) {
+    private static void sendPackageInfos(MessageChannel channel, List<ReferenceCardPackage> packages) {
         if (packages == null || packages.isEmpty()) {
             return;
         }
@@ -90,7 +92,7 @@ public class AndcatReferenceCardsMessageHelper {
         List<FactionModel> factionsInPackage = AndcatReferenceCardsDraftable.getFactionsInPackage(refPackage);
         MessageV2Builder messageBuilder = new MessageV2Builder(cardsInfoThread, 3);
 
-        messageBuilder.appendLine(player.getRepresentation() + " Select how each faction will be used.");
+        messageBuilder.appendLine(player.getRepresentation() + ", select how each faction will be used.");
 
         // Part: Home System
         String factionForPart = refPackage.homeSystemFaction();
@@ -186,7 +188,7 @@ public class AndcatReferenceCardsMessageHelper {
             }
 
             ReferenceCardPackage refPackage =
-                    draftable.getPackageByChoiceKey(playerPicks.getFirst().getChoiceKey());
+                    draftable.getPackageByChoiceKey(playerPicks.getFirst().choiceKey());
             if (refPackage == null) {
                 messageBuilder.append(playerRepresentation).append(" has an invalid package pick.");
                 continue;
@@ -228,7 +230,7 @@ public class AndcatReferenceCardsMessageHelper {
             // Try to update existing message if possible
             for (var message : history) {
                 if (message.getAuthor().isBot() && message.getContentRaw().startsWith(USER_SUMMARY_PREFIX)) {
-                    message.editMessage(messageBuilder.toString()).queue();
+                    message.editMessage(messageBuilder.toString()).queue(Consumers.nop(), BotLogger::catchRestError);
                     return;
                 }
             }
@@ -241,7 +243,7 @@ public class AndcatReferenceCardsMessageHelper {
                     .getActionsChannel()
                     .sendMessage(messageBuilder.toString())
                     .setComponents(ActionRow.of(refreshButton))
-                    .queue();
+                    .queue(Consumers.nop(), BotLogger::catchRestError);
         });
     }
 
@@ -384,8 +386,8 @@ public class AndcatReferenceCardsMessageHelper {
                 if (otherPlayerPicks.isEmpty()) {
                     continue;
                 }
-                ReferenceCardPackage otherRefPackage =
-                        draftable.getPackageByChoiceKey(otherPlayerPicks.get(0).getChoiceKey());
+                ReferenceCardPackage otherRefPackage = draftable.getPackageByChoiceKey(
+                        otherPlayerPicks.getFirst().choiceKey());
                 if (otherRefPackage == null) {
                     continue;
                 }
@@ -398,7 +400,7 @@ public class AndcatReferenceCardsMessageHelper {
         }
 
         String playerChoiceKey = draftManager.getPlayerPicks(playerUserId, draftable.getType()).stream()
-                .map(DraftChoice::getChoiceKey)
+                .map(DraftChoice::choiceKey)
                 .findFirst()
                 .orElse(null);
         if (playerChoiceKey == null) {
@@ -430,7 +432,7 @@ public class AndcatReferenceCardsMessageHelper {
                     refPackage.startingUnitsFaction(),
                     refPackage.speakerOrderFaction(),
                     true);
-            Integer packageKey = Integer.parseInt(playerChoiceKey.substring("package".length()));
+            Integer packageKey = Integer.valueOf(playerChoiceKey.substring("package".length()));
             draftable.getReferenceCardPackages().put(packageKey, refPackage);
 
             // Disable buttons
@@ -439,6 +441,7 @@ public class AndcatReferenceCardsMessageHelper {
             updatePackagePickSummary(draftManager);
 
             if (draftable.whatsStoppingSetup(draftManager) == null) {
+                printChoices(draftManager);
                 printSpeakerOrder(draftManager);
 
                 // TODO: Make sure setup messages go to the main game channel, not the event channel (e.g. frontier
@@ -545,7 +548,7 @@ public class AndcatReferenceCardsMessageHelper {
             }
         }
 
-        Integer packageKey = Integer.parseInt(playerChoiceKey.substring("package".length()));
+        Integer packageKey = Integer.valueOf(playerChoiceKey.substring("package".length()));
         draftable.getReferenceCardPackages().put(packageKey, refPackage);
 
         // Update buttons
@@ -554,6 +557,51 @@ public class AndcatReferenceCardsMessageHelper {
         updatePackagePickSummary(draftManager);
 
         return null;
+    }
+
+    private void printChoices(DraftManager draftManager) {
+        Game game = draftManager.getGame();
+        for (Entry<String, PlayerDraftState> entry : draftManager.playerStates.entrySet()) {
+            String playerUserId = entry.getKey();
+            String playerName = game.getPlayer(playerUserId).getRepresentation(false, true, true, true);
+            PlayerDraftState playerDraftState = entry.getValue();
+            List<DraftChoice> picks = playerDraftState.getPicks(AndcatReferenceCardsDraftable.TYPE);
+
+            MessageV2Builder message = new MessageV2Builder(game.getActionsChannel());
+
+            if (picks.isEmpty()) {
+                message.append(Container.of(TextDisplay.of(playerName + " does not have any reference card picks.")));
+                message.send();
+                continue;
+            }
+
+            StringBuilder pickSummary = new StringBuilder(
+                    playerName + "'s reference card picks: " + System.lineSeparator() + System.lineSeparator());
+            ReferenceCardPackage refPackage =
+                    draftable.getPackageByChoiceKey(picks.getFirst().choiceKey());
+            if (refPackage.homeSystemFaction() != null) {
+                FactionModel homeSystemFaction = Mapper.getFaction(refPackage.homeSystemFaction());
+                pickSummary.append(TwilightsFallInfoHelper.getFactionSetupInfo(homeSystemFaction, false, true, false));
+            } else {
+                pickSummary.append(" Home System: None").append(System.lineSeparator());
+            }
+            if (refPackage.startingUnitsFaction() != null) {
+                FactionModel startingUnitsFaction = Mapper.getFaction(refPackage.startingUnitsFaction());
+                pickSummary.append(
+                        TwilightsFallInfoHelper.getFactionSetupInfo(startingUnitsFaction, true, false, false));
+            } else {
+                pickSummary.append(" Starting Units: None").append(System.lineSeparator());
+            }
+            if (refPackage.speakerOrderFaction() != null) {
+                FactionModel speakerOrderFaction = Mapper.getFaction(refPackage.speakerOrderFaction());
+                pickSummary.append(
+                        TwilightsFallInfoHelper.getFactionSetupInfo(speakerOrderFaction, false, false, true));
+            } else {
+                pickSummary.append(" Priority Number: None").append(System.lineSeparator());
+            }
+            message.append(Container.of(TextDisplay.of(pickSummary.toString())));
+            message.send();
+        }
     }
 
     private void printSpeakerOrder(DraftManager draftManager) {
@@ -569,7 +617,7 @@ public class AndcatReferenceCardsMessageHelper {
             }
 
             ReferenceCardPackage refPackage =
-                    this.draftable.getPackageByChoiceKey(picks.get(0).getChoiceKey());
+                    draftable.getPackageByChoiceKey(picks.getFirst().choiceKey());
 
             if (refPackage.speakerOrderFaction() == null) {
                 unorderedPlayers.add(playerUserId);
